<resources>
    <string name="app_name">Ex3</string>
    <string name="operand1">operand1:</string>
    <string name="operand2">operand2:</string>
    <string name="hint">Enter the operand</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">*</string>
    <string name="divid">/</string>
    <string name="equals">=</string>
    <string name="clear">clear</string>
    <string name="result">result</string>
    <string name="answer">ans</string>
</resources>
