<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.ex3.MainActivity">


    <RelativeLayout
        android:id="@+id/topLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:id="@+id/firstLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/operand1"
                android:id="@+id/operand1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:ems="10"
                android:hint="@string/hint"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:background="@drawable/border"
                android:id="@+id/etOperand1"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/firstLayout"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="30sp"
                android:id="@+id/plusButton"
                android:onClick="calc" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:id="@+id/minusButton"
                android:layout_marginLeft="35dp"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:onClick="calc" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/multiple"
                android:layout_marginLeft="35dp"
                android:textSize="30sp"
                android:id="@+id/multipleButton"
                android:onClick="calc"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/divid"
                android:id="@+id/dividButton"
                android:layout_marginLeft="35dp"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:onClick="calc"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/buttonsLayout"
            android:layout_marginTop="75dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/operand2"
                android:id="@+id/operand2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:ems="10"
                android:hint="@string/hint"
                android:id="@+id/etOperand2"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:background="@drawable/border"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#000000"
            android:layout_below="@+id/secondLayout"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:id="@+id/resultLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/line"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals"
                android:textSize="30sp"
                android:id="@+id/equalsButton" />

            <TextView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="result"
                android:gravity="center"
                android:background="@drawable/border"
                android:layout_marginLeft="45dp"

                android:id="@+id/resultText" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
